--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,7 +20,9 @@
         @else {
         <div class="flex align-items-center">
             <!-- <h4 class="name_tag mb-0">Hello {{userName}} </h4> -->
-            <button pButton pRipple class="p-button-warning p-button-rounded" (click)="logout()">Sign Out</button>
+            <!-- <button pButton pRipple class="p-button-warning p-button-rounded" (click)="logout()">Sign Out</button> -->
+            <p-button icon="pi pi-sign-out" (click)="logout()" [rounded]="true" severity="secondary"
+                pTooltip="Sign Out" tooltipPosition="bottom" />
         </div>
         }
     </div>
@@ -50,33 +52,26 @@
                     </li>
 
                     <li (click)="sidebarVisible = false">
-                        <a pRipple routerLink="['/license/list']"
-                            class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors p-ripple">
-                            <i class="pi pi-credit-card mr-2"></i>
-                            <span class="font-medium">License Requests</span>
+                        <a pRipple routerLink="['/music/search']"
+                            class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors p-ripple text-decoration-none">
+                            <i class="pi pi-search mr-2"></i>
+                            <span class="font-medium">Search</span>
                         </a>
                     </li>
-                    <!-- <li (click)="sidebarVisible = false">
-                  <a pRipple [routerLink]="['/profile']"
-                    class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors p-ripple">
-                    <i class="pi pi-user mr-2"></i>
-                    <span class="font-medium">Profile</span>
-                  </a>
-                </li> -->
+
+                    <li (click)="sidebarVisible = false">
+                        <a pRipple routerLink="['/music/library']"
+                            class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors p-ripple text-decoration-none">
+                            <i class="pi pi-headphones mr-2"></i>
+                            <span class="font-medium">Library</span>
+                        </a>
+                    </li>
 
                     <li (click)="sidebarVisible = false">
                         <a pRipple routerLink="['/license/approved-license-list']"
-                            class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors p-ripple">
+                            class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors p-ripple text-decoration-none">
                             <i class="pi pi-credit-card mr-2"></i>
-                            <span class="font-medium">Approved Licenses</span>
-                        </a>
-                    </li>
-
-                    <li (click)="sidebarVisible = false">
-                        <a pRipple routerLink="['/organizations/list']"
-                            class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors p-ripple">
-                            <i class="pi pi-sitemap mr-2"></i>
-                            <span class="font-medium">Organizations</span>
+                            <span class="font-medium">Manage Subscription</span>
                         </a>
                     </li>
 
