--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,18 +13,7 @@
         }
     </div>
     <div></div>
-    <div class="mr-2">
-        @if (!isUserLoggedIn) {
-        <button pButton pRipple class="p-button-info p-button-rounded" label="Sign In" (click)="login()"></button>
-        }
-        @else {
-        <div class="flex align-items-center">
-            <!-- <h4 class="name_tag mb-0">Hello {{userName}} </h4> -->
-            <!-- <button pButton pRipple class="p-button-warning p-button-rounded" (click)="logout()">Sign Out</button> -->
-            <p-button icon="pi pi-sign-out" (click)="logout()" [rounded]="true" severity="secondary"
-                pTooltip="Sign Out" tooltipPosition="bottom" />
-        </div>
-        }
+    <div class="mr-2">      
     </div>
 </div>
 
@@ -80,6 +69,14 @@
                             class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors p-ripple">
                             <i class="pi pi-cog mr-2"></i>
                             <span class="font-medium">Settings</span>
+                        </a>
+                    </li>
+
+                    <li (click)="sidebarVisible = false">
+                        <a pRipple (click)="logout()"
+                            class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors p-ripple">
+                            <i class="pi pi-sign-out mr-2"></i>
+                            <span class="font-medium">Sign Out</span>
                         </a>
                     </li>
 
