--- a/src/app/user/signin/signin.component.html
+++ b/src/app/user/signin/signin.component.html
@@ -1,3 +1,7 @@
+@if(isLoading) {
+<app-progress-bar></app-progress-bar>
+}
+
 <div class="flex flex-row flex-wrap m-5 p-3">
 
     <p-card styleClass="social-continue-card">
@@ -45,7 +49,7 @@
         </div>
         <div class="my-2 custom-password">
             <p-floatLabel>
-                <p-password formControlName="password" [toggleMask]="true" >
+                <p-password formControlName="password" [toggleMask]="true">
                     <!-- <ng-template pTemplate="header">
                         <h6>Pick a password</h6>
                     </ng-template> -->
