commiting changes for deployment

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -24,7 +24,7 @@
             <div class="flex align-items-center justify-content-between px-4 pt-3 flex-shrink-0">
                 <span class="inline-flex align-items-center gap-2">
 
-                    <span class="font-semibold text-2xl text-primary">Music Aggregator</span>
+                    <span class="font-semibold text-2xl text-primary">Aggregator</span>
                 </span>
                 <span>
 
