--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -80,7 +80,7 @@
                         </a>
                     </li>
 
-                    <li (click)="sidebarVisible = false">
+                    <!-- <li (click)="sidebarVisible = false">
                         <a pRipple
                             class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors p-ripple">
                             <i class="pi pi-sun mr-2" *ngIf="!dark"></i>
@@ -88,7 +88,7 @@
                             <p-inputSwitch [(ngModel)]="dark" />
                         </a>
                             
-                    </li>
+                    </li> -->
 
 
                 </ul>
