--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,6 @@
-@import '../public/styles/themes/default.css';
+/* @import '../public/styles/themes/default.css';
 @import '../public/styles/themes/dark.css';
-@import '../public/styles/base.css';
+@import '../public/styles/base.css'; */
 
 body{
     background: rgb(245, 245, 245) !important;
