--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="topnav flex flex-row justify-content-between p-2" *ngIf="isUserLoggedIn">
+<div class="topnav flex flex-row justify-content-between p-2" *ngIf="isUserLoggedIn" >
 
     <div class="ml-2">
         @if (isUserLoggedIn) {
@@ -33,7 +33,7 @@
             <div class="overflow-y-auto">
                 <ul class="list-none p-3 m-0">
                     <li (click)="sidebarVisible = false">
-                        <a pRipple routerLink="['/']"
+                        <a pRipple routerLink="['/home']"
                             class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors p-ripple">
                             <i class="pi pi-home mr-2"></i>
                             <span class="font-medium">Home</span>
