--- a/src/app/user/home/home.component.html
+++ b/src/app/user/home/home.component.html
@@ -1,1 +1,12 @@
-<p>home works!</p>
+
+<div class="m-2">
+    <p-button (onClick)="loginToSpotify()">Spotify Consent</p-button>
+</div>
+
+<div class="m-3">
+    <p-button (onClick)="getArtists()">Get Playlists</p-button>
+</div>
+
+<div class="m-3 flex justify-content-center" >
+    <textarea [maxLength]="300"  pInputTextarea [(ngModel)]="artistsResponseString"  ></textarea>
+</div>
