completed till calling authorization api

--- a/src/app/user/home/home.component.html
+++ b/src/app/user/home/home.component.html
@@ -4,7 +4,7 @@
 </div>
 
 <div class="m-3">
-    <p-button (onClick)="getArtists()">Get Playlists</p-button>
+    <p-button (onClick)="getPlaylists()">Get Playlists</p-button>
 </div>
 
 <div class="m-3 flex justify-content-center" >
