--- a/src/app/user/home/home.component.html
+++ b/src/app/user/home/home.component.html
@@ -1,6 +1,6 @@
 
 <div class="m-2">
-    <p-button (onClick)="loginToSpotify()">Spotify Consent</p-button>
+    <p-button (onClick)="callSpotifyAuth()">Spotify Consent</p-button>
 </div>
 
 <div class="m-3">
@@ -10,3 +10,4 @@
 <div class="m-3 flex justify-content-center" >
     <textarea [maxLength]="300"  pInputTextarea [(ngModel)]="artistsResponseString"  ></textarea>
 </div>
+
