added files for strava

--- a/src/app/user/home/home.component.html
+++ b/src/app/user/home/home.component.html
@@ -11,3 +11,7 @@
     <textarea [maxLength]="300"  pInputTextarea [(ngModel)]="artistsResponseString"  ></textarea>
 </div>
 
+
+<div class="m-2">
+    <p-button (onClick)="callSpotifyAuth()">Strava Consent</p-button>
+</div>
