--- a/src/app/user/home/home.component.html
+++ b/src/app/user/home/home.component.html
@@ -13,5 +13,5 @@
 
 
 <div class="m-2">
-    <p-button (onClick)="callSpotifyAuth()">Strava Consent</p-button>
+    <p-button (onClick)="callStravaAuth()">Strava Consent</p-button>
 </div>
