added  strava auth and basic apis

--- a/src/app/user/home/home.component.html
+++ b/src/app/user/home/home.component.html
@@ -1,17 +1,7 @@
 
-<div class="m-2">
-    <p-button (onClick)="callSpotifyAuth()">Spotify Consent</p-button>
-</div>
-
-<div class="m-3">
-    <p-button (onClick)="getPlaylists()">Get Playlists</p-button>
-</div>
-
-<div class="m-3 flex justify-content-center" >
-    <textarea [maxLength]="300"  pInputTextarea [(ngModel)]="artistsResponseString"  ></textarea>
+<div>
+    <h2>Home Component</h2>
 </div>
 
 
-<div class="m-2">
-    <p-button (onClick)="callStravaAuth()">Strava Consent</p-button>
-</div>
+
