--- a/src/app/spotify/spotify-consent/spotify-consent.component.html
+++ b/src/app/spotify/spotify-consent/spotify-consent.component.html
@@ -1,1 +1,11 @@
-<p>spotify-consent works!</p>
+<div class="m-2">
+    <p-button (onClick)="callSpotifyAuth()">Spotify Consent</p-button>
+</div>
+
+<div class="m-3">
+    <p-button (onClick)="getPlaylists()">Get Playlists</p-button>
+</div>
+
+<div class="m-3 flex justify-content-center" >
+    <textarea [maxLength]="300"  pInputTextarea [(ngModel)]="artistsResponseString"  ></textarea>
+</div>
