added major changes along with login and register functionalities styling

--- a/src/app/user/home/home.component.html
+++ b/src/app/user/home/home.component.html
@@ -1,7 +1,5 @@
-
-<div>
-    <h2>Home Component</h2>
+<div class="" style="display: flex;justify-content: center;margin-top: 20px;margin-bottom: 10px;">
+    <app-spotify-consent></app-spotify-consent>
+    <app-strava-consent></app-strava-consent>
 </div>
-
-
-
+        
