--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -2,6 +2,7 @@
 .topnav {
     background-color: #000000;
     overflow: hidden;
+    height: 62px;
   }
   
   /* Style the links inside the navigation bar */
