--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="topnav flex flex-row justify-content-between p-2" *ngIf="isUserLoggedIn">
+<div class="topnav flex flex-row justify-content-between p-2" *ngIf="isUserLoggedIn" >
 
     <div class="ml-2">
         @if (isUserLoggedIn) {
@@ -9,12 +9,13 @@
         @else {
         <p-button (click)="sidebarVisible = true" icon="pi pi-bars" severity="secondary">
         </p-button>
-        }
+    }
         }
     </div>
     <div></div>
     <div class="mr-2">
     </div>
+    
 </div>
 
 
@@ -24,7 +25,7 @@
             <div class="flex align-items-center justify-content-between px-4 pt-3 flex-shrink-0">
                 <span class="inline-flex align-items-center gap-2">
 
-                    <span class="font-semibold text-2xl text-primary">Aggregator</span>
+                    <span class="font-semibold text-2xl text-primary">Audio Active</span>
                 </span>
                 <span>
 
@@ -67,7 +68,7 @@
                     <li (click)="navigateToPath('/spotify/consent')">
                         <a pRipple 
                             class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors p-ripple">
-                            <i class="pi pi-cog mr-2"></i>
+                            <i class="bi bi-spotify mr-2"></i>
                             <span class="font-medium">Spotify</span>
                         </a>
                     </li>
@@ -75,7 +76,7 @@
                     <li (click)="navigateToPath('/strava/consent')">
                         <a pRipple 
                             class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors p-ripple">
-                            <i class="pi pi-cog mr-2"></i>
+                            <i class="bi bi-strava mr-2"></i>
                             <span class="font-medium">Strava</span>
                         </a>
                     </li>
@@ -112,6 +113,10 @@
         </div>
     </ng-template>
 </p-sidebar>
-<p-toast></p-toast>
 
-<router-outlet />
+<p-toast></p-toast>
+<!-- @if (isUserLoggedIn) { -->
+    <router-outlet />
+<!-- }@else {
+<app-signin></app-signin>
+} -->
