--- a/src/app/strava/strava-consent/strava-consent.component.html
+++ b/src/app/strava/strava-consent/strava-consent.component.html
@@ -1,3 +1,4 @@
 <div class="m-2">
-    <p-button (onClick)="callStravaAuth()">Strava Consent</p-button>
+    <p-button (onClick)="callStravaAuth()">
+        <i class="bi bi-strava mr-2"></i>Link Strava </p-button>
 </div>
