integrated apis for login and register

--- a/src/app/user/register/register.component.html
+++ b/src/app/user/register/register.component.html
@@ -1,4 +1,4 @@
-<p-card  class="register-card p-3" >
+<p-card class="register-card p-3">
 
     <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
 
@@ -7,17 +7,16 @@
         </div>
 
         <div class="input_top">
-            <input pInputText id="username" formControlName="firstName" 
-                placeholder="First Name" />
+            <input pInputText id="firstName" formControlName="firstName" placeholder="First Name" />
         </div>
 
         <div class="input_top">
-            <input pInputText id="username" formControlName="lastName"  placeholder="Last Name" />
+            <input pInputText id="lastName" formControlName="lastName" placeholder="Last Name" />
 
         </div>
 
         <div class="input_top">
-            <input pInputText id="username" formControlName="email"  placeholder="Email" />
+            <input pInputText id="email" formControlName="email" placeholder="Email" />
         </div>
 
         <div class="custom-password input_top">
@@ -41,24 +40,24 @@
             </p-floatLabel>
         </div>
         <div class="my-3 flex justify-content-center signin_btn input_top">
-            <button pButton pRipple label="Register" class="p-button-primary">
+            <button type="submit" pButton pRipple label="Register" class="p-button-primary">
             </button>
         </div>
 
         <div class="form-link">
             <span>Already have an account? <a href="" class="link login-link">Login</a></span>
-          </div>
+        </div>
 
         <div class="orline"></div>
-            <div class="p-2">
-                <div class="login_google">
-                    <asl-google-signin-button type='standard' text="signup_with" size='large' [width]="250">
-                    </asl-google-signin-button>
-                </div>
-                <div class="login_fb">
-                    <p-button size="small" label="Sign up with Facebook" styleClass="facebook-button"
-                        icon="pi pi-facebook" (click)="signInWithFB()" />
-                </div>
+        <div class="p-2">
+            <div class="login_google">
+                <asl-google-signin-button type='standard' text="signup_with" size='large' [width]="250">
+                </asl-google-signin-button>
             </div>
+            <div class="login_fb">
+                <p-button size="small" label="Sign up with Facebook" styleClass="facebook-button" icon="pi pi-facebook"
+                    (click)="signInWithFB()" />
+            </div>
+        </div>
     </form>
 </p-card>
