--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -65,7 +65,7 @@
                         </a>
                     </li>
 
-                    <li (click)="navigateToPath('/spotify/consent')">
+                    <!-- <li (click)="navigateToPath('/spotify/consent')">
                         <a pRipple 
                             class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors p-ripple">
                             <i class="bi bi-spotify mr-2"></i>
@@ -79,7 +79,7 @@
                             <i class="bi bi-strava mr-2"></i>
                             <span class="font-medium">Strava</span>
                         </a>
-                    </li>
+                    </li> -->
 
                     <li (click)="sidebarVisible = false">
                         <a pRipple
