completed integration and solved bug of lazy loading od signin component

--- a/src/app/user/home/home.component.html
+++ b/src/app/user/home/home.component.html
@@ -1,5 +1,18 @@
-<div class="" style="display: flex;justify-content: center;margin-top: 20px;margin-bottom: 10px;">
+<!-- <div class="" style="display: flex;justify-content: center;margin-top: 20px;margin-bottom: 10px;">
     <app-spotify-consent></app-spotify-consent>
     <app-strava-consent></app-strava-consent>
+</div> -->
+
+<div class="" style="display: flex;justify-content: center;margin-top: 20px;margin-bottom: 10px;">
+
+    <div class="m-2">
+        <p-button (onClick)="callSpotifyAuth()">
+            <i class="bi bi-spotify mr-2"></i> Link Spotify </p-button>
+    </div>
+
+    <div class="m-2">
+        <p-button (onClick)="callStravaAuth()">
+            <i class="bi bi-strava mr-2"></i>Link Strava </p-button>
+    </div>
 </div>
         
