major changes in activity and audio tables

--- a/src/app/strava/strava-consent/strava-consent.component.html
+++ b/src/app/strava/strava-consent/strava-consent.component.html
@@ -1,4 +1,4 @@
-<div class="m-2">
+<!-- <div class="m-2">
     <p-button (onClick)="callStravaAuth()">
         <i class="bi bi-strava mr-2"></i>Link Strava </p-button>
-</div>
+</div> -->
