--- a/src/app/spotify/spotify-consent/spotify-consent.component.html
+++ b/src/app/spotify/spotify-consent/spotify-consent.component.html
@@ -1,7 +1,7 @@
-<div class="m-2">
+<!-- <div class="m-2">
     <p-button (onClick)="callSpotifyAuth()">
         <i class="bi bi-spotify mr-2"></i> Link Spotify </p-button>
-</div>
+</div> -->
 
 <!-- <div class="m-3">
     <p-button (onClick)="getPlaylists()">Get Playlists</p-button>
