--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -41,19 +41,19 @@
                         </a>
                     </li>
 
-                    <li (click)="sidebarVisible = false">
+                    <!-- <li (click)="sidebarVisible = false">
                         <a pRipple routerLink="['/music/search']"
                             class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors p-ripple text-decoration-none">
                             <i class="pi pi-search mr-2"></i>
                             <span class="font-medium">Search</span>
                         </a>
-                    </li>
+                    </li> -->
 
-                    <li (click)="sidebarVisible = false">
-                        <a pRipple routerLink="['/music/library']"
+                    <li (click)="navigateToPath('/spotify/playlists')" >
+                        <a pRipple
                             class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors p-ripple text-decoration-none">
                             <i class="pi pi-headphones mr-2"></i>
-                            <span class="font-medium">Library</span>
+                            <span class="font-medium">Playlists</span>
                         </a>
                     </li>
 
