--- a/src/app/spotify/playlist/playlist.component.html
+++ b/src/app/spotify/playlist/playlist.component.html
@@ -1,1 +1,156 @@
-<p>playlist works!</p>
+@if(isLoading) {
+<app-progress-bar></app-progress-bar>
+}
+
+@if(!isSpotifyLinked) {
+<div class="m-2 p-1">
+    <!-- <h3>No spofity account linked. Please, link a spotify account.</h3> -->
+
+    <div class="card">
+        <p-messages [(value)]="messages" [enableService]="false" />
+    </div>
+
+</div>
+}@else {
+
+<section class="playlist_pagetitle_section">
+    <div class="flex">
+        <div class="flex flex-1 playlist_pagetitle justify-content-center m-2 px-5 py-3">
+            <h2>Playlists</h2>
+        </div>
+    </div>
+</section>
+
+<!-- All Playlist section start -->
+<section class="allplaylist" *ngIf="!showTracks && !showAudioFeatures">
+    <div class="grid m-0">
+
+        @for(playlist of userPlaylists; track playlist.name) {
+        <div class="col-3 all_list_grid p-3 justify-content-center"
+            (click)="getPlayListTracks(playlist.tracks.href,playlist.name)">
+            <div class="all_listgrid_inner">
+                <img [src]="playlist.images[0].url">
+                <h3>{{playlist.name}}</h3>
+            </div>
+        </div>
+        }
+
+    </div>
+</section>
+<!-- All Playlist section end -->
+
+<!-- Playlist Tracks List -->
+<div class="palylist_table" *ngIf="showTracks && !showAudioFeatures">
+    <p-table [value]="playlistTracks" [tableStyle]="{'min-width': '60rem'}">
+        <ng-template pTemplate="caption">
+            <div class="flex flex-row justify-content-between">
+                <h3>Tracks</h3>
+                <h3>{{currentPlayListName}}</h3>
+                <p-button (click)="showTracks=false">Back</p-button>
+            </div>
+        </ng-template>
+        <ng-template pTemplate="header">
+            <tr>
+                <th style="width:80px">
+                </th>
+                <th pSortableColumn="name">
+                    Title <p-sortIcon field="name" />
+                </th>
+                <th pSortableColumn="category">
+                    Artist <p-sortIcon field="category" />
+                </th>
+                <th pSortableColumn="quantity">
+                    External Url 
+                </th>
+            </tr>
+        </ng-template>
+        <ng-template pTemplate="body" let-track>
+            <tr>
+                <td><img [src]="track.track.album.images[0].url" style="width:60px;height: 60px;border-radius: 50%;">
+                </td>
+                <td>
+                    <p-button class="anchor_btn" (click)="getAudioFeatures(track.track.id, track.track.name)"
+                        [label]="track.track.name" [link]="true" />
+                </td>
+                <td>{{ track.track.artists[0].name }}</td>
+                <td>
+                    <p-button class="anchor_btn" (click)="openInSpotify(track.track.external_urls.spotify)"
+                        label="Open in Spotify" [link]="true" />
+                </td>
+            </tr>
+        </ng-template>
+    </p-table>
+
+</div>
+
+<!-- Audio Features -->
+<div class="mt-2" *ngIf="showAudioFeatures">
+    <p-table [value]="audioFeatures" styleClass="p-datatable-gridlines" [tableStyle]="{ 'min-width': '50rem' }">
+        <ng-template pTemplate="caption">
+
+            <div class="flex flex-row justify-content-between">
+                <h3>Audio Features</h3>
+                <h3>{{currentTrackName}}</h3>
+                <p-button (click)="showAudioFeatures=false">Back</p-button>
+            </div>
+
+        </ng-template>
+        <ng-template pTemplate="header">
+            <tr>
+                <th>Danceability</th>
+                <th>Energy</th>
+                <th>Key </th>
+                <th>Loudness</th>
+                <th>Speechiness</th>
+                <th>Acousticness</th>
+                <th>Liveness</th>
+                <th>Valence</th>
+                <th>Tempo</th>
+                <th>Duration</th>
+                <th>Track Href</th>
+                <th>Analysis Url</th>
+            </tr>
+        </ng-template>
+        <ng-template pTemplate="body" let-audioFeature>
+            <tr>
+                <td>{{ audioFeature.danceability }}</td>
+                <td>{{ audioFeature.energy }}</td>
+                <td>{{ audioFeature.key }}</td>
+                <td>{{ audioFeature.loudness }}</td>
+                <td>{{ audioFeature.speechiness }}</td>
+                <td>{{ audioFeature.acousticness }}</td>
+                <td>{{ audioFeature.liveness }}</td>
+                <td>{{ audioFeature.valence }}</td>
+                <td>{{ audioFeature.tempo }}</td>
+                <td>{{ audioFeature.duration_ms }}</td>
+                <td>{{ audioFeature.track_href }}</td>
+                <td>{{ audioFeature.analysis_url }}</td>
+            </tr>
+        </ng-template>
+    </p-table>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+}
