--- a/src/app/user/home/home.component.html
+++ b/src/app/user/home/home.component.html
@@ -26,6 +26,7 @@
             <tr>
                 <th>Activity Name</th>
                 <th>Start Date </th>
+                <th>End Date </th>
                 <th>Sport Type</th>
                 <th>Distance</th>
                 <th>Time</th>
@@ -36,10 +37,11 @@
         <ng-template pTemplate="body" let-activity>
             <tr>
                 <td>
-                    <p-button class="anchor_btn" (click)="getActivityDetails(activity.id,activity.start_date)" [label]="activity.name"
-                        [link]="true" />
+                    <p-button class="anchor_btn" (click)="getActivityDetails(activity.id,activity.start_date)"
+                        [label]="activity.name" [link]="true" />
                 </td>
                 <td>{{ activity.start_date | date:'MMM d, y, h:mm:ss a' }}</td>
+                <td>{{ activity.end_date | date:'MMM d, y, h:mm:ss a' }}</td>
                 <td>{{ activity.sport_type }}</td>
                 <td>{{ activity.distance }}</td>
                 <td>{{ activity.moving_time }}</td>
@@ -65,8 +67,9 @@
         <ng-template pTemplate="header">
             <tr>
                 <th>Activity Name</th>
-                <th>Track</th>
+                <th>Tracks</th>
                 <th>Start Date </th>
+                <th>End Date </th>
                 <th>Sport Type</th>
                 <th>Distance</th>
                 <th>Time</th>
@@ -79,11 +82,17 @@
         <ng-template pTemplate="body" let-activity>
             <tr>
                 <td>{{ activity.name }}</td>
-                <td>
-                    <p-button class="anchor_btn" [disabled]="pairedTrack.track.id===0" (click)="getAudioFeatures(pairedTrack.track.id)"
-                        [label]="pairedTrack.track.name" [link]="true" />
+                <td style="width: 25%;">
+
+                    @for(track of pairedTracks; track track.track.name) {
+                    <p-button class="anchor_btn" [disabled]="track.track.id===0"
+                        (click)="getAudioFeatures(pairedTrack.track.id)" [label]="track.track.name" [link]="true" />
+                    <br />
+                    }
+
                 </td>
                 <td>{{ activity.start_date | date:'MMM d, y, h:mm:ss a' }}</td>
+                <td>{{ activity.end_date | date:'MMM d, y, h:mm:ss a' }}</td>
                 <td>{{ activity.sport_type }}</td>
                 <td>{{ activity.distance }}</td>
                 <td>{{ activity.moving_time }}</td>
