--- a/src/app/user/home/home.component.html
+++ b/src/app/user/home/home.component.html
@@ -29,7 +29,7 @@
                 <th>End Date </th>
                 <th>Sport Type</th>
                 <th>Distance</th>
-                <th>Time</th>
+                <th>Duration</th>
                 <th>Avg Speed</th>
                 <th>Max Speed</th>
             </tr>
@@ -54,7 +54,7 @@
 
 
 <!-- Activity Details -->
-<div class="mt-2" *ngIf="showDetails && !showAudioFeatures">
+<!-- <div class="mt-2" *ngIf="showDetails && !showAudioFeatures">
     <p-table [value]="activityDetails" styleClass="p-datatable-gridlines" [tableStyle]="{ 'min-width': '50rem' }">
         <ng-template pTemplate="caption">
 
@@ -104,7 +104,55 @@
             </tr>
         </ng-template>
     </p-table>
+</div> -->
+
+<div class="mt-2" *ngIf="showDetails && !showAudioFeatures">
+    <p-table [value]="pairedTracks" styleClass="p-datatable-gridlines" [tableStyle]="{ 'min-width': '50rem' }">
+        <ng-template pTemplate="caption">
+
+            <div class="flex flex-row justify-content-between">
+                <h3>Activity Details</h3>
+                <p-button (click)="showDetails=false">Back</p-button>
+            </div>
+
+        </ng-template>
+        <ng-template pTemplate="header">
+            <tr>
+                <th>Time</th>
+                <th>Name</th>
+                <th>Artist </th>
+                <th>eBPM</th>
+                <th>Duration</th>
+                <th>Distance</th>
+                <th>Distance Start</th>
+                <th>Distance End</th>
+                <th>Moving Time</th>
+                <th>Pace </th>
+                <th>Speed</th>
+            </tr>
+        </ng-template>
+        <ng-template pTemplate="body" let-track>
+            <tr>
+                <td >{{track.start_time | date: 'hh:mm:ss a'}}</td>
+                <td>
+                    <p-button class="anchor_btn" [disabled]="track.track.id===0"
+                    (click)="getAudioFeatures(track.track.id)" [label]="track.track.name" [link]="true" />
+                </td>
+                <td>{{track.track.artists[0].name}}</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+        </ng-template>
+    </p-table>
 </div>
+
+
 
 
 <!-- Audio Features -->
