--- a/src/app/user/home/home.component.html
+++ b/src/app/user/home/home.component.html
@@ -17,9 +17,11 @@
 
 
 <!-- Activities List -->
-<div class="mt-2" *ngIf="!showDetails && !showAudioFeatures">
-    <p-table [value]="athleteActivities" styleClass="p-datatable-gridlines" [paginator]="true" [rows]="10"
-        [rowsPerPageOptions]="[10, 25, 50]" [tableStyle]="{ 'min-width': '50rem' }">
+<div class="mt-2" *ngIf="!showDetails && !showAudioFeatures && showData">
+    <p-table #dt1 [value]="athleteActivities" styleClass="p-datatable-gridlines" 
+    [rows]="10" [showCurrentPageReport]="true" [rowsPerPageOptions]="[10,25,50]" [totalRecords]="athleteActivities.length"
+        [paginator]="true" currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
+    [tableStyle]="{ 'min-width': '50rem' }">
         <ng-template pTemplate="caption">
             <h3>Activities</h3>
         </ng-template>
@@ -56,7 +58,7 @@
 
 <!-- Activity Details -->
 <div class="mt-2" *ngIf="showDetails && !showAudioFeatures">
-    <p-table [value]="pairedTracks" styleClass="p-datatable-gridlines"
+    <p-table #dt2 [value]="pairedTracks" styleClass="p-datatable-gridlines"
      [tableStyle]="{ 'min-width': '50rem' }" [sortField]="'start_time'" [sortOrder]="1" >
         <ng-template pTemplate="caption">
 
@@ -111,7 +113,7 @@
 
 <!-- Audio Features -->
 <div class="mt-2" *ngIf="showAudioFeatures">
-    <p-table [value]="audioFeatures" styleClass="p-datatable-gridlines" [tableStyle]="{ 'min-width': '50rem' }">
+    <p-table #dt3 [value]="audioFeatures" styleClass="p-datatable-gridlines" [tableStyle]="{ 'min-width': '50rem' }">
         <ng-template pTemplate="caption">
 
             <div class="flex flex-row justify-content-between">
