--- a/src/app/user/home/home.component.html
+++ b/src/app/user/home/home.component.html
@@ -18,23 +18,29 @@
 
 <!-- Activities List -->
 <div class="mt-2" *ngIf="!showDetails && !showAudioFeatures && showData">
-    <p-table #dt1 [value]="athleteActivities" styleClass="p-datatable-gridlines" 
+    <p-table #dt1 [value]="athleteActivities" styleClass="p-datatable-gridlines" sortMode="multiple"
     [rows]="10" [showCurrentPageReport]="true" [rowsPerPageOptions]="[10,25,50]" [totalRecords]="athleteActivities.length"
         [paginator]="true" currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
     [tableStyle]="{ 'min-width': '50rem' }">
         <ng-template pTemplate="caption">
-            <h3>Activities</h3>
+            <div class="flex justify-content-between">
+                <h3>Activities</h3>
+
+                <p-button label="Clear" [outlined]="true" icon="pi pi-filter-slash" (onClick)="clear1(dt1)" />
+            </div>
         </ng-template>
         <ng-template pTemplate="header">
             <tr>
-                <th>Activity Name</th>
-                <th>Start Date </th>
-                <th>End Date </th>
-                <th>Sport Type</th>
-                <th>Distance</th>
-                <th>Duration</th>
-                <th>Avg Speed</th>
-                <th>Max Speed</th>
+                <th pSortableColumn="name" >
+                    Activity Name <p-sortIcon field="name" />
+                </th>
+                <th pSortableColumn="start_date">Start Date <p-sortIcon field="start_date" /></th>
+                <th pSortableColumn="end_date">End Date <p-sortIcon field="end_date" /></th>
+                <th pSortableColumn="sport_type">Sport Type <p-sortIcon field="sport_type" /></th>
+                <th pSortableColumn="distance">Distance<p-sortIcon field="distance" /></th>
+                <th pSortableColumn="elapsed_time">Duration<p-sortIcon field="elapsed_time" /></th>
+                <th pSortableColumn="average_speed">Avg Speed<p-sortIcon field="average_speed" /></th>
+                <th pSortableColumn="max_speed">Max Speed<p-sortIcon field="max_speed" /></th>
             </tr>
         </ng-template>
         <ng-template pTemplate="body" let-activity>
@@ -46,10 +52,12 @@
                 <td>{{ activity.start_date | date:'MMM d, y, h:mm:ss a' }}</td>
                 <td>{{ activity.end_date | date:'MMM d, y, h:mm:ss a' }}</td>
                 <td>{{ activity.sport_type }}</td>
-                <td>{{ activity.distance }}</td>
-                <td>{{ activity.elapsed_time }}</td>
-                <td>{{ activity.average_speed }}</td>
-                <td>{{ activity.max_speed }}</td>
+                <!-- <td>{{ activity.distance | number:'1.2-2' }} km</td> -->
+                <td>{{ activity.distance_km | number:'1.2-2' }} km</td>
+                <!-- <td>{{ activity.elapsed_time }}</td> -->
+                <td>{{ activity.duration_mins }}</td>
+                <td>{{ activity.average_speed | number:'1.2-2'}} km/hr</td>
+                <td>{{ activity.max_speed | number:'1.2-2'}} km/hr</td>
             </tr>
         </ng-template>
     </p-table>
